Fix Class details

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This web created by Nguyen Dang Huynh Long (18127136), Nguyen Thai Tan (18127269) as a midterm project for Course PTUDWNC - 18KTPM1"
+      content="This web created by Nguyen Dang Huynh Long (18127136), Nguyen Thai Tan (18127269) as a project for Course PTUDWNC - 18KTPM1"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
